unforseen error on mobile fixed regarding nav

--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ a {
     top: 0;
     right: 0;
     left: 0%;
-    height: 70%;
+    height: 100%;
     padding-top: 180px;
     padding-left: 32%;
     opacity: 0;
@@ -359,7 +359,7 @@ a {
     top: 0;
     right: 0;
     left: 0%;
-    height: 70%;
+    height: 100%;
     padding-top: 180px;
     padding-left: 30%;
     opacity: 0;
@@ -375,7 +375,7 @@ a {
     top: 0;
     right: 0;
     left: 0%;
-    height: 70%;
+    height: 100%;
     padding-top: 180px;
     padding-left: 25%;
     opacity: 0;
